--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-alembic==1.0.6
-certifi==2018.11.29
+alembic
+certifi
 cffi
-chardet==3.0.4
-Click==8.0
-Flask==2.2
-Flask-Misaka==1.0.0
-Flask-SQLAlchemy==2.3.2
-gunicorn==19.9.0
-idna==2.8
-itsdangerous==2.0
-Jinja2==3.0.3
-Mako==1.0.7
-MarkupSafe==2.1.1
-misaka==2.1.1
-psycopg2==2.9.5
-pycparser==2.19
-python-dotenv==0.10.1
-python-editor==1.0.3
-requests==2.28
-six==1.12.0
-SQLAlchemy==1.3.0
-urllib3==1.24.1
-Werkzeug==2.2
+chardet
+Click
+Flask
+Flask-Misaka
+Flask-SQLAlchemy
+gunicorn
+idna
+itsdangerous
+Jinja2
+Mako
+MarkupSafe
+misaka
+psycopg2
+pycparser
+python-dotenv
+python-editor
+requests
+six
+SQLAlchemy
+urllib3
+Werkzeug
