--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ Jinja2==3.0.3
 Mako==1.0.7
 MarkupSafe==2.1.1
 misaka==2.1.1
-psycopg2==2.9.5
+psycopg2-binary
 pycparser==2.19
 python-dotenv==0.10.1
 python-editor==1.0.3
